# coding-agent

./: .gitignore  .taskmasterconfig  AGENT.md  CLAUDE.md  README.md  TEMP_TODO.md  TODO.md  implementation_plan.md  papershift2diff.txt  papershift2diff_edit.txt  project_setup.sh  project_setup_agent.sh  pyproject.toml  remove_spaces_from_pdfs.sh  temp_adar1test.json  test_script.py  test_script.sh
.cursor/rules/: tech-stack.mdc
.roo/rules/: tech-stack.md
PERSONAL_NOTES/: bias_variance.md  papershift2_pr_notes.md
PLANS/: concurrency_plan.md  detailed_implementation_v0.1.md  implement_memory.md  integrated_plan.md  memory_graph.md  memory_graph2.md  overall_plan.md  paper_prompts.md  sentence_transformers.py
PROJECT_PLANS_PRDS/: arxiv_paper_management_plan.md  glm_fix.md  old_paper_management_plan_bk.md  paper_management_plan.md  start_interaction_while_loop_fix.md
REFERENCE_INFO/: customize_browser_use.md  memory_for_agents.md
examples/: README.md  run_ingestor_mistral.py  run_ingestor_pymupdf.py
examples/core/: example_scheduler_usage.py
examples/memory/: example_advanced_querying.py  example_basic_usage.py
examples/output/: advanced_querying_memory.db  basic_usage_memory.db
examples/output/advanced_querying_embeddings/: code_snippet_01.npy  meeting_notes_01.npy  meeting_notes_02.npy  proj_idea_01.npy  proj_idea_02.npy  tech_article_01.npy
examples/output/basic_usage_embeddings/: doc_001.npy  doc_002.npy  (+1 more)
processed_papers/: metadata.db
processed_papers/blobs/: paper_2_text.txt  paper_3_text.txt  paper_4_text.txt  paper_5_text.txt  paper_6_text.txt  paper_7_text.txt  paper_8_text.txt  paper_9_text.txt
reference_code_examples/: genai_files.md
reference_code_examples/genaisdk/: auto_fn_call_related.md  gemini_caches.md  gemini_pdf.py
scripts/: task-complexity-report.json
src/: agent_browser_utils.py  async_task_manager.py  autocomplete.py  cli.py  config.py  config.yaml  database.py  import_test.py  llm_agent_core.py  main.py  main_alt.py  main_old.py  main_old2.py  my_test_file.txt  old_cli_backup.py  slashcommands.py  tools.py
src/core/: scheduler.py
src/memory/: adapter.py  embedding_manager.py  hybrid_sqlite.py  service.py
src/prompts/: brief_elegant.txt  methods3_insights4.txt  paper_full_overview.txt  summarize.txt
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt
tests/: test_database.py  test_integration.py  test_sql_query.py
tests/core/: test_scheduler.py
tests/data/: database.db
tests/integration/: test_minimal_pipeline.py
tests/memory/: test_hybrid_sqlite.py
(+6 files in other folders)
